alteracao no css, js e responsividade adicionda para telas de 320px ate 480px

--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
 
 <body>
     <header>
-
         <div class="hover">
             <div class="barra-navegacao">
                 <h1>VJSS</h1>
                 <label for="Search"></label>
                 <input type="text" id="Search" placeholder="Search">
+                <div class="hamburguer">
+                    <div class="line"></div>
+                    <div class="line"></div>
+                    <div class="line"></div>
+                </div>
+
                 <nav>
-                    <ul>
+                    <ul class="nav-list">
                         <li><a href="#">Sign/Register</a></li>
                         <li><a href="#"><ion-icon name="globe-outline"></ion-icon></a></li>
                         <li><a href="#"><ion-icon name="heart-outline"></ion-icon></a></li>
@@ -47,18 +52,14 @@
         </div>
     </header>
     <section class="content-new">
-        <div>
+        <div class="feminino">
             <img src="src/imagens/new.jpg" alt="">
-        </div>
-        <div class="about-new">
             <h2>NEW COLECTION</h2>
         </div>
     </section>
     <section class="content-new">
-        <div class="about-new">
+        <div class="maculino">
             <h2>NEW COLECTION</h2>
-        </div>
-        <div>
             <img src="src/imagens/new-2.jpg" alt="">
         </div>
     </section>
